--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "pg": "^8.11.0",
-    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
     "axios": "^1.6.0",
