--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,9 +1,8 @@
-version: '3.8'
-
 services:
   # PostgreSQL Database
   db:
     image: postgres:14-alpine
+    container_name: attendance-db
     environment:
       POSTGRES_USER: app
       POSTGRES_PASSWORD: secret
@@ -14,7 +13,7 @@ services:
     ports:
       - "5432:5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U app"]
+      test: ["CMD-SHELL", "pg_isready -U app -d attendance"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -22,6 +21,7 @@ services:
   # Backend API
   backend:
     build: ./backend
+    container_name: attendance-backend
     environment:
       DATABASE_URL: postgresql://app:secret@db:5432/attendance
       FACE_SERVICE_URL: http://face-service:5001
@@ -34,23 +34,28 @@ services:
         condition: service_healthy
     volumes:
       - ./backend/uploads:/app/uploads
+    restart: unless-stopped
 
   # Face Recognition Service
   face-service:
     build: ./face-service
+    container_name: attendance-face-service
     ports:
       - "5001:5001"
     volumes:
       - ./face-service/encodings:/app/encodings
+    restart: unless-stopped
 
   # Frontend (React)
   frontend:
     build: ./frontend
+    container_name: attendance-frontend
     ports:
       - "3000:80"
     depends_on:
       - backend
       - face-service
+    restart: unless-stopped
 
 volumes:
   dbdata:
