--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,4 @@
 services:
-  # PostgreSQL Database
   db:
     image: postgres:14-alpine
     container_name: attendance-db
@@ -18,7 +17,6 @@ services:
       timeout: 5s
       retries: 5
 
-  # Backend API
   backend:
     build: ./backend
     container_name: attendance-backend
@@ -29,14 +27,14 @@ services:
       JWT_SECRET: your_jwt_secret_change_this_in_production
     ports:
       - "4000:4000"
+    volumes:
+      - ./backend/uploads:/app/uploads
+      - ./backend/src:/app/src  # Live code updates
     depends_on:
       db:
         condition: service_healthy
-    volumes:
-      - ./backend/uploads:/app/uploads
     restart: unless-stopped
 
-  # Face Recognition Service
   face-service:
     build: ./face-service
     container_name: attendance-face-service
@@ -44,9 +42,9 @@ services:
       - "5001:5001"
     volumes:
       - ./face-service/encodings:/app/encodings
+      - ./face-service/app.py:/app/app.py  # Live code updates
     restart: unless-stopped
 
-  # Frontend (React)
   frontend:
     build: ./frontend
     container_name: attendance-frontend
