--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,45 +1,74 @@
-name: CI/CD - Build and Push to Docker Hub
+name: CI/CD Pipeline - Automated Attendance System
 
 on:
   push:
     branches:
-      - main
-  workflow_dispatch:
+      - main  # Trigger only when pushing to main branch
 
 jobs:
-  build-and-push:
+  build:
+    name: 🧱 Build & Test
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1 - Checkout code
-      - name: 🛠️ Checkout repository
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      # Step 2 - Set up Docker Buildx
-      - name: 🔧 Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      # Step 3 - Login to Docker Hub
-      - name: 🔑 Login to Docker Hub
-        uses: docker/login-action@v3
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          node-version: 18
 
-      # Step 4 - Build and push backend image
-      - name: 🐳 Build & Push Backend
-        uses: docker/build-push-action@v6
-        with:
-          context: ./backend
-          file: ./backend/Dockerfile
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/attendance-backend:latest
+      - name: Install dependencies (frontend)
+        working-directory: frontend
+        run: npm install
 
-      # Step 5 - Build and push frontend image
-      - name: 🌐 Build & Push Frontend
-        uses: docker/build-push-action@v6
-        with:
-          context: ./frontend
-          file: ./frontend/Dockerfile
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/attendance-frontend:latest
+      - name: Install dependencies (backend)
+        working-directory: backend
+        run: npm install
+
+      - name: Run Lint (optional)
+        run: echo "✅ Lint checks passed (add eslint here if needed)"
+
+      - name: Build Docker images
+        run: |
+          docker build -t attendance-backend ./backend
+          docker build -t attendance-frontend ./frontend
+          docker build -t attendance-face ./face-service
+
+  deploy:
+    name: 🚀 Deploy to Server
+    runs-on: ubuntu-latest
+    needs: build  # Wait for build job to complete
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Setup SSH Connection
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan -H ${{ secrets.SERVER_HOST }} >> ~/.ssh/known_hosts
+
+      - name: 🚀 Deploy via SSH and Docker Compose
+        run: |
+          ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} << 'EOF'
+            set -e
+            echo "📦 Pulling latest code..."
+            cd /home/ubuntu/automated-attendance-system || git clone https://github.com/<your-username>/automated-attendance-system.git
+            cd automated-attendance-system
+            git pull origin main
+
+            echo "🧹 Stopping old containers..."
+            docker-compose down || true
+
+            echo "🔨 Building new containers..."
+            docker-compose build
+
+            echo "🚀 Starting app..."
+            docker-compose up -d
+
+            echo "✅ Deployment successful!"
+          EOF
