--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,33 +1,48 @@
-name: CI/CD Deployment
+name: CI/CD - Automated Attendance System
 
 on:
   push:
     branches:
-      - main  # or master
+      - main   # triggers workflow when you push to main branch
 
 jobs:
-  deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
+      - name: 🔹 Checkout code
+        uses: actions/checkout@v3
 
-      - name: Setup SSH
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan -H ${{ secrets.SERVER_HOST }} >> ~/.ssh/known_hosts
+      - name: 🔹 Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
-      - name: Deploy via SSH
+      - name: 🔹 Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: 🐳 Build & Push Backend
+        uses: docker/build-push-action@v5
+        with:
+          context: ./backend
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/attendance-backend:latest
+
+      - name: 🐳 Build & Push Frontend
+        uses: docker/build-push-action@v5
+        with:
+          context: ./frontend
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/attendance-frontend:latest
+
+      - name: 🚀 Run Docker Compose Locally
         run: |
-          ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} << 'EOF'
-            cd /home/ubuntu/automated-attendance-system || git clone https://github.com/bayarmaa01/capstone1.1.git
-            cd automated-attendance-system
-            git pull origin main
-            docker-compose down
-            docker-compose build
-            docker-compose up -d
-            docker system prune -f
-          EOF
+          docker compose down || true
+          docker compose up -d --build
+
+      - name: 🌐 Deployment Info
+        run: |
+          echo "✅ Build complete!"
+          echo "Staging: ${{ secrets.STAGING_URL }}"
+          echo "Production: ${{ secrets.PRODUCTION_URL }}"
