--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,48 +1,97 @@
-name: CI/CD - Automated Attendance System
+name: 🚀 Full CI/CD Pipeline (Backend → Docker Hub | Frontend → GitHub Pages)
 
 on:
   push:
     branches:
-      - main   # triggers workflow when you push to main branch
+      - main
+  workflow_dispatch:
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
+
+env:
+  DOCKERHUB_USER: ${{ secrets.DOCKERHUB_USERNAME }}
+  DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
 
 jobs:
-  build-and-deploy:
+  # ------------------------------
+  # 🧱 Backend & Face Service Build + Push to Docker Hub
+  # ------------------------------
+  build-backend:
     runs-on: ubuntu-latest
-
     steps:
-      - name: 🔹 Checkout code
-        uses: actions/checkout@v3
+      - name: 🧾 Checkout repository
+        uses: actions/checkout@v4
 
-      - name: 🔹 Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+      - name: 🔧 Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-      - name: 🔹 Log in to Docker Hub
-        uses: docker/login-action@v2
+      - name: 🔐 Log in to Docker Hub
+        uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: ${{ env.DOCKERHUB_USER }}
+          password: ${{ env.DOCKERHUB_TOKEN }}
 
-      - name: 🐳 Build & Push Backend
+      - name: 🏗️ Build & Push Backend
         uses: docker/build-push-action@v5
         with:
           context: ./backend
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/attendance-backend:latest
+          tags: ${{ env.DOCKERHUB_USER }}/attendance-backend:latest
 
-      - name: 🐳 Build & Push Frontend
+      - name: 🧠 Build & Push Face Service
         uses: docker/build-push-action@v5
         with:
-          context: ./frontend
+          context: ./face-service
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/attendance-frontend:latest
+          tags: ${{ env.DOCKERHUB_USER }}/attendance-face-service:latest
 
-      - name: 🚀 Run Docker Compose Locally
-        run: |
-          docker compose down || true
-          docker compose up -d --build
+  # ------------------------------
+  # 💻 Frontend Build + Deploy to GitHub Pages
+  # ------------------------------
+  deploy-frontend:
+    runs-on: ubuntu-latest
+    needs: build-backend
+    steps:
+      - name: 🧾 Checkout repository
+        uses: actions/checkout@v4
 
-      - name: 🌐 Deployment Info
+      - name: ⚙️ Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
+
+      - name: 📦 Install dependencies
         run: |
-          echo "✅ Build complete!"
-          echo "Staging: ${{ secrets.STAGING_URL }}"
-          echo "Production: ${{ secrets.PRODUCTION_URL }}"
+          cd frontend
+          npm ci
+
+      - name: 🏗️ Build React App
+        run: |
+          cd frontend
+          npm run build
+
+      - name: 📤 Upload production build
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: frontend/build
+
+  # ------------------------------
+  # 🚀 Deploy Frontend to GitHub Pages
+  # ------------------------------
+  deploy:
+    runs-on: ubuntu-latest
+    needs: deploy-frontend
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    steps:
+      - name: 🚀 Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
