--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,9 +20,9 @@ env:
   DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
 
 jobs:
-  # ------------------------------
+  # ---------------------------------------------------
   # 🧱 Backend & Face Service Build + Push to Docker Hub
-  # ------------------------------
+  # ---------------------------------------------------
   build-backend:
     runs-on: ubuntu-latest
     steps:
@@ -52,9 +52,9 @@ jobs:
           push: true
           tags: ${{ env.DOCKERHUB_USER }}/attendance-face-service:latest
 
-  # ------------------------------
-  # 💻 Frontend Build + Deploy to GitHub Pages
-  # ------------------------------
+  # ---------------------------------------------------
+  # 💻 Frontend Build + Upload Artifact
+  # ---------------------------------------------------
   deploy-frontend:
     runs-on: ubuntu-latest
     needs: build-backend
@@ -82,9 +82,9 @@ jobs:
         with:
           path: frontend/build
 
-  # ------------------------------
+  # ---------------------------------------------------
   # 🚀 Deploy Frontend to GitHub Pages
-  # ------------------------------
+  # ---------------------------------------------------
   deploy:
     runs-on: ubuntu-latest
     needs: deploy-frontend
