--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -35,8 +35,8 @@ services:
   frontend:
     image: bayarmaa/attendance-system-frontend
     environment:
-      - REACT_APP_API_URL=http://<EC2_PUBLIC_IP>:4000
-      - REACT_APP_FACE_SERVICE_URL=http://<EC2_PUBLIC_IP>:5001
+      - REACT_APP_API_URL=http:/3.110.84.10/:4000
+      - REACT_APP_FACE_SERVICE_URL=http://3.110.84.10:5001
     ports:
       - "80:80"
     depends_on:
