--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -99,4 +99,5 @@ jobs:
       - name: 🌐 Deployment Info
         run: |
           echo "✅ Deployed successfully!"
-          echo "🌍 Visit your site at: https://bayarmaa01.github.io/capstone1.1/"
+          echo "🌍 Visit your site: https://bayarmaa01.github.io/capstone1.1"
+          echo "🔗 Backend API: https://capstone1-1-3vnu.onrender.com"
