--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend",
-  "homepage": "https://bayarmaa01.github.io/capstone1.1/",
+  "homepage": ".",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
