--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,48 +1,86 @@
-version: '3.8'
-
 services:
+  # 🗄️ PostgreSQL Database
   db:
     image: postgres:14-alpine
+    container_name: attendance-db
     environment:
       POSTGRES_USER: app
       POSTGRES_PASSWORD: secret
       POSTGRES_DB: attendance
     volumes:
       - dbdata:/var/lib/postgresql/data
+      - ./backend/sql/init.sql:/docker-entrypoint-initdb.d/init.sql
     ports:
       - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U app -d attendance"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
     restart: unless-stopped
 
+  # ⚙️ Backend (Node.js + Express)
   backend:
-    image: bayarmaa/attendance-system-backend
+    build: ./backend
+    container_name: attendance-backend
     environment:
       DATABASE_URL: postgresql://app:secret@db:5432/attendance
       FACE_SERVICE_URL: http://face-service:5001
       PORT: 4000
-      NODE_ENV: production
+      JWT_SECRET: aB3$xK9#mN7@qL2!pR5&wT8*vD4%zF6^hJ1-cG0+yU
+      NODE_ENV: development
     ports:
       - "4000:4000"
+    volumes:
+      - ./backend/uploads:/app/uploads
+      - ./backend/src:/app/src
+      - /app/node_modules
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     restart: unless-stopped
 
+  # 🤖 Face Recognition Service (Python + Flask)
   face-service:
-    image: bayarmaa/attendance-system-face-service
+    build:
+      context: ./face-service
+      target: development
+    container_name: attendance-face-service
     ports:
       - "5001:5001"
+    volumes:
+      - ./face-service/encodings:/app/encodings
+      - ./face-service/app.py:/app/app.py
+    environment:
+      - FLASK_ENV=development
+      - FLASK_DEBUG=1
     restart: unless-stopped
 
+  # 💻 Frontend (React)
   frontend:
-    image: bayarmaa/attendance-system-frontend
-    environment:
-      - REACT_APP_API_URL=http:/3.110.84.10/:4000
-      - REACT_APP_FACE_SERVICE_URL=http://3.110.84.10:5001
+    build:
+      context: ./frontend
+      target: development
+    container_name: attendance-frontend
     ports:
-      - "80:80"
+      - "3000:3000"
+    environment:
+      - CHOKIDAR_USEPOLLING=true
+      - WATCHPACK_POLLING=true
+      - REACT_APP_API_URL=http://localhost:4000
+      - REACT_APP_FACE_SERVICE_URL=http://localhost:5001
+      - WDS_SOCKET_PORT=3000
+    volumes:
+      - ./frontend/src:/app/src
+      - ./frontend/public:/app/public
+      - /app/node_modules
     depends_on:
       - backend
       - face-service
+    stdin_open: true
+    tty: true
     restart: unless-stopped
 
+# 💾 Persistent volume for PostgreSQL data
 volumes:
   dbdata:
